[project]
name = "wm-doc"
version = "0.1.0"
description = "Offline deterministic static inventory tool for webMethods Integration Server packages."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "lxml>=5.2.2",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "typer>=0.12.3",
]

[project.scripts]
wm-doc = "wm_doc.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "ruff>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wm_doc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
packages = ["wm_doc"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["lxml.*", "yaml.*"]
ignore_missing_imports = true
